k8s/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: my-lb-service
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: monitoring-stack-kube-prom-prometheus
  ports:
    - name: http-web
      port: 9090
      protocol: TCP
      targetPort: 9090
  type: LoadBalancer
