k8s/ing-ext.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ext
spec:
  rules:
    - host: hello-world-ext.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 9090
